# xvdriver

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  build_and_setup.ps1  install_driver.bat  meta.json  project_analysis.txt  push_updates.ps1  reset_env.ps1  setup_xvdriver.ps1  write_layer_json.ps1  xvdriver.def  xvdriver_layer.json
.github/workflows/: build.yml
build_android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
dist_android/: meta.json
dist_eden/: meta.json
include/: logger.h  vk_extensions.h  vk_wrapper.h  xvdriver.h
layer/: xvdriver_layer.json
src/: command_buffer_dispatch.cpp  command_buffer_dispatch.h  device_dispatch.cpp  device_dispatch.h  feature_mask.h  font_atlas.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp  instance_dispatch.cpp  instance_dispatch.h  layer_exports.cpp  logger.cpp  logger.h  vk_dispatch_table.h  vk_wrapper.cpp  vk_wrapper.h  xv_loader.cpp  xv_loader.h
src/dispatch/: device_dispatch.cpp  device_dispatch.h  instance_dispatch.cpp  instance_dispatch.h
src/dispatch/command_buffer_dispatch/: command_buffer_dispatch.cpp  command_buffer_dispatch.h
src/extensions/: feature_mask.cpp
src/loader/: vk_dispatch_table.h  xv_loader.cpp  xv_loader.h
src/logging/: logger.cpp  logger.h
tools/: build_android.sh
